added Follow and Ban feature in front-end
