# service/api/follow-user.go
@@ -10,44 +10,49 @@ import (
 )
 
 func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	//getting the http parameters
+	// Getting the HTTP parameters
 	user_id, err := strconv.Atoi(ps.ByName("user_id"))
 	if err != nil {
-		http.Error(w, "cannot parse current uid", http.StatusBadRequest)
+		http.Error(w, "cannot parse user_id", http.StatusBadRequest)
 		return
 	}
-	target_id, err := strconv.Atoi(ps.ByName("target_id"))
+	following_id, err := strconv.Atoi(ps.ByName("following_id"))
 	if err != nil {
-		http.Error(w, "cannot parse target uid", http.StatusBadRequest)
+		http.Error(w, "cannot parse following_id", http.StatusBadRequest)
 		return
 	}
 
-	//checking invalid operations
-	if user_id == target_id {
-		http.Error(w, "invalid action, you can't follow your self!", http.StatusBadRequest)
+	// Checking invalid operations
+	if user_id == following_id {
+		http.Error(w, "invalid action, you can't follow yourself!", http.StatusBadRequest)
 		return
 	}
 
-	//getting and checking if target and current users exists
+	// Getting and checking if target and current users exist
 	current_user, err := rt.db.GetUserByID(user_id)
 	if err != nil {
 		http.Error(w, "current user not recognized", http.StatusBadRequest)
 		return
 	}
 
-	target_user, err := rt.db.GetUserByID(target_id)
+	target_user, err := rt.db.GetUserByID(following_id)
 	if err != nil {
 		http.Error(w, "target user not recognized", http.StatusBadRequest)
 		return
 	}
 
-	//authentication check
-	isAuth(w, r, current_user.UserID)
+	// Authentication check
+	Auth(w,r)
 
-	//adding the follow relation into database
-	rt.db.FollowUser(current_user.UserID, target_user.UserID)
+	// Adding the follow relation into database
+	err = rt.db.FollowUser(current_user.UserID, target_user.UserID)
+	if err != nil {
+		http.Error(w, "error following user", http.StatusInternalServerError)
+		return
+	}
 
-	//success message
+	// Success message
 	w.WriteHeader(http.StatusOK)
-	fmt.Fprintf(w, "user %s succesfully followed %s", current_user.Username, target_user.Username)
+	fmt.Fprintf(w, "user %s successfully followed %s", current_user.Username, target_user.Username)
 }
+
